# MCourses

./: .gitignore
Backend/: get_started.txt  load_database.py  pyproject.toml  requirements.txt
Backend/MCoursesFlaskApp/: __init__.py  config.py  secrets-example.py
Backend/MCoursesFlaskApp/models/: __init__.py  course.py  school.py  section.py  subject.py  term.py
Backend/MCoursesFlaskApp/views/: __init__.py  index.py
MCourses/: ClassViewModel.swift  ContentView.swift  Course.swift  CourseItem.swift  CourseItemView.swift  CourseViewModel.swift  GoogleService-Info.plist  Info.plist  Login.swift  MCoursesApp.swift  Main.storyboard  MakeReviewView.swift  SwiftUIView.swift
MCourses.xcodeproj/: project.pbxproj
MCourses/Authentication/: AuthManager.swift  AuthView.swift  AuthViewModel.swift  GoogleSignInHelper.swift  LoginEmailView.swift  LoginEmailViewModel.swift
MCourses/Core/: ClassView.swift  Course.swift  CourseItem.swift  CourseItemView.swift  CourseItemViewModel.swift  CourseService.swift  CourseView.swift  CourseViewModel.swift  FilterView.swift  MakeReviewView.swift  ProfileView.swift  ProfileViewModel.swift  Review.swift  ReviewService.swift  RootView.swift  SearchCourse.swift  SearchView.swift  SearchViewModel.swift  SettingsView.swift  User.swift  (+1 more)
MCourses2/: ClassView.swift  ClassesListView.swift  ContentView.swift  FilterAndSearchView.swift  MCourses2App.swift  SwiftUIView.swift  SwiftUIView2.swift
MCourses2.xcodeproj/: project.pbxproj
MCoursesTests/: MCoursesTests.swift
MCoursesUITests/: MCoursesUITests.swift  MCoursesUITestsLaunchTests.swift
(+16 files in other folders)
