[build-system]
requires = ["setuptools>=64.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "MCoursesFlaskApp"
version = "1.0.0"
dependencies = [
    "arrow",
    "bs4",
    "Flask",
    "pycodestyle",
    "pydocstyle",
    "pylint",
    "pytest",
    "pytest-mock",
    "requests",
]
requires-python = ">=3.10"

[tool.setuptools]
packages = ["MCoursesFlaskApp"]

[tool.pylint."messages control"]
disable = ["cyclic-import"]
